components/apps/firewall/syslog-tcp.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syslog-tcp
  namespace: firewall
spec:
  entryPoints:
    - syslog
  routes:
  - match: HostSNI(`*`)
    services:
    - name: logstash-ls-syslog
      port: 5959
